# humcp

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
config/: tools.yaml
toolset/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
toolset/config/: tools.yaml
toolset/docker/: Dockerfile
toolset/src/: logging_setup.py  main.py
toolset/src/apps/api/: http_request.html
toolset/src/apps/audio/: elevenlabs_text_to_speech.html  mlx_transcribe.html  spotify_get_track.html
toolset/src/apps/calculator/: absolute_value.html  logarithm.html  subtract.html
toolset/src/apps/calendar/: calcom_get_availability.html  calcom_list_bookings.html
toolset/src/apps/cloud/: airflow_get_dag_run.html  airflow_trigger_dag.html  aws_lambda_invoke.html  docker_list_containers.html  docker_stop_container.html  e2b_run_code.html
toolset/src/apps/data/: read_csv_file.html
toolset/src/apps/database/: describe_table.html  duckdb_list_tables.html  neo4j_get_schema.html  redshift_query.html
toolset/src/apps/ecommerce/: shopify_create_product.html  shopify_get_customers.html  shopify_get_product.html
toolset/src/apps/finance/: financial_datasets_get_prices.html  openbb_get_market_news.html  yfinance_get_options.html
toolset/src/apps/google/: google_maps_directions.html  google_maps_reverse_geocode.html
toolset/src/apps/media/: giphy_random.html  lumalab_generate_video.html  moviepy_create_video.html  nano_banana_run.html  unsplash_get_photo.html  unsplash_get_random_photo.html
toolset/src/apps/memory/: mem0_add_memory.html  mem0_search_memory.html  zep_get_session.html
toolset/src/apps/messaging/: resend_send_email.html  send_email.html  slack_get_thread_replies.html  slack_get_user_info.html  slack_search_messages.html  slack_send_message.html  telegram_edit_message.html  telegram_send_message.html  twilio_make_call.html  webex_send_message.html
toolset/src/apps/project_management/: confluence_search.html  github_get_repo.html  jira_get_issue.html  linear_list_issues.html  notion_create_page.html  notion_search.html  todoist_create_task.html  todoist_get_tasks.html  zendesk_create_ticket.html  zendesk_get_ticket.html
toolset/src/apps/research/: wikipedia_get_page.html
toolset/src/apps/search/: duckduckgo_news.html  duckduckgo_search.html  searxng_search.html  seltz_search.html  serper_image_search.html  tavily_extract.html
toolset/src/apps/social/: hackernews_get_top_stories.html  hackernews_search.html  reddit_get_top_posts.html  x_post_tweet.html  youtube_get_captions.html  youtube_search.html
toolset/src/apps/weather/: openweather_get_forecast.html
toolset/src/apps/web_scraping/: apify_run_actor.html  brightdata_scrape.html  browserbase_scrape.html  firecrawl_crawl.html  scrapegraph_scrape.html  spider_links.html  trafilatura_extract.html
toolset/src/humcp/: auth.py  decorator.py  middleware.py  permissions.py  routes.py  schemas.py  server.py
toolset/src/tools/: __init__.py
toolset/src/tools/api/: schemas.py
toolset/src/tools/audio/: SKILL.md  __init__.py  cartesia.py  desi_vocal.py  eleven_labs.py  mlx_transcribe.py  spotify.py
toolset/src/tools/builder/: sandbox.py  schemas.py  storage.py
toolset/src/tools/calendar/: __init__.py  calcom.py  zoom.py
toolset/src/tools/cloud/: SKILL.md  airflow.py  aws_lambda.py  aws_ses.py  daytona.py  e2b.py
toolset/src/tools/data/: csv.py  pandas.py
toolset/src/tools/database/: duckdb.py  neo4j.py  redshift.py  sql.py
toolset/src/tools/ecommerce/: SKILL.md  brandfetch.py  shopify.py
toolset/src/tools/files/: SKILL.md  markdown_table.py  pdf_to_markdown.py  schemas.py
toolset/src/tools/finance/: evm.py  financial_datasets.py  openbb.py
toolset/src/tools/google/: auth.py  calendar.py  chat.py  docs.py  drive.py  forms.py  gmail.py  google_bigquery.py  google_maps.py  sheets.py  slides.py  tasks.py
toolset/src/tools/local/: calculator.py  local_file_system.py  shell.py
toolset/src/tools/media/: dalle.py  fal.py  giphy.py  lumalab.py  models_labs.py  nano_banana.py  opencv.py  replicate.py  unsplash.py
toolset/src/tools/memory/: SKILL.md  mem0.py  zep.py
toolset/src/tools/messaging/: SKILL.md  __init__.py  discord.py  email_smtp.py  resend.py  telegram.py  twilio.py  webex.py
toolset/src/tools/project_management/: SKILL.md  bitbucket.py  clickup.py  confluence.py  github.py  jira.py  linear.py  notion.py  todoist.py  trello.py  zendesk.py
toolset/src/tools/research/: pubmed.py  schemas.py
toolset/src/tools/search/: SKILL.md  brave.py  exa.py  schemas.py  seltz.py  serpapi.py  serper.py  tavily_tool.py  valyu.py
toolset/src/tools/social/: SKILL.md  __init__.py  hackernews.py  reddit.py  youtube.py
toolset/src/tools/storage/: SKILL.md  bucket_tools.py  metadata_tools.py  object_tools.py  schemas.py  tools.py
toolset/src/tools/weather/: SKILL.md  __init__.py  openweather.py  schemas.py
toolset/src/tools/web_scraping/: agentql.py  apify.py  brightdata.py  browserbase.py  firecrawl.py  jina.py  linkup.py  oxylabs.py  scrapegraph.py  spider.py
toolset/tests/: conftest.py
toolset/tests/humcp/: __init__.py  test_apps.py  test_auth.py  test_config.py  test_decorator.py  test_models.py  test_permissions.py  test_routes.py  test_server.py  test_skills.py  test_storage_path.py
toolset/tests/tools/builder/: __init__.py  test_builder.py
toolset/tests/tools/data/: test_csv.py  test_pandas.py
toolset/tests/tools/database/: test_postgres.py
toolset/tests/tools/files/: test_markdown_table.py  test_pdf_to_markdown.py
toolset/tests/tools/google/: test_calendar.py  test_chat.py  test_docs.py  test_drive.py  test_forms.py  test_gmail.py  test_sheets.py  test_slides.py  test_tasks.py
toolset/tests/tools/image/: test_ocr.py
toolset/tests/tools/local/: test_calculator.py  test_local_file_system.py  test_shell.py
toolset/tests/tools/search/: test_tavily_tool.py
toolset/tests_integration/graphite/: simple_function_call_assistant.py  test_simple_function_call_assistant.py
(+392 files in other folders)
