[project]
name = "HuMCP"
version = "0.1.0"
description = "HuMCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "fastmcp>=2.13.0.2",
    "pandas>=2.3.3",
    "duckdb>=1.4.2",
    "tavily-python>=0.7.13",
    "markitdown[all]>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pre-commit>=3.4.0",
    "grafi>=0.0.32",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]

[tool.flake8]
max-line-length = 88
ignore = [
    "E203",
    "E501",
    "W503",
    "E701",
    "E704",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN401",
    "DUO109",
]
per-file-ignores = "**/__init__.py:F401"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
lines_after_imports = 2
force_single_line = true
